--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,5 +4,6 @@ $lightGray: #eeeeee;
 $white: #ffffff;
 $primary-dark: #232831;
 $secondary-dark: #383f49;
+$nav-gray: #7d7f88;
 
 $default-font: 'SF Pro Display', sans-serif;
