Add basic ImageGallyerContainer examples

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,3 +7,5 @@ $secondary-dark: #383f49;
 $nav-gray: #7d7f88;
 
 $default-font: 'SF Pro Display', sans-serif;
+
+$primary-gradient: linear-gradient(to bottom, #917afd, #6246ea);
