--- a/src/stories/buttons/button.scss
+++ b/src/stories/buttons/button.scss
@@ -11,7 +11,7 @@
 }
 
 .button-primary {
-    background: linear-gradient(to bottom, #917afd, #6246ea);
+    background: $primary-gradient;
     color: $white;
     font-family: $default-font;
     box-shadow: 0px 9px 90px 5px rgba(104, 77, 236, 0.5);
